--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --colors"
+    "test:coverage": "jest --coverage --colors --verbose"
   },
   "eslintConfig": {
     "extends": "react-app"
