--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.13.1",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "resolve": "1.12.2",
