--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.13.1",
@@ -77,6 +78,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
+    "deploy": "yarn build && firebase deploy",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors --verbose"
   },
