--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "deploy": "yarn build && firebase deploy",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watch --verbose --colors",
     "test:coverage": "jest --coverage --colors --verbose"
   },
   "eslintConfig": {
