--- a/package.json
+++ b/package.json
@@ -102,8 +102,9 @@
       "<rootDir>/src"
     ],
     "coveragePathIgnorePatterns": [
-      "src/*.js",
-      "src/__inttests__"
+      "src/*.{js,jsx,ts,tsx}",
+      "src/__inttests__",
+      "src/config/*"
     ],
     "coverageThreshold": {
       "global": {
@@ -115,7 +116,9 @@
     },
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
+      "!src/**/*.d.ts",
+      "!src/*.js",
+      "!src/config/*"
     ],
     "setupFiles": [
       "react-app-polyfill/jsdom",
